# privacy-agent

./: .gitignore  README.md  app.py  build.py  privacy_agent_plan.md  pyproject.toml  requirements.txt  test_adk_agents.py  test_agent.py  test_api_key.py
deployment/: README.md  deploy.py
privacy_agent/: __init__.py  agent.py  data_structures.py
privacy_agent/agents/: __init__.py  compliance_assessor_agent.py  policy_analyzer_agent.py  policy_fetcher_agent.py  regulation_understanding_agent.py  report_generator_agent.py
privacy_agent/utils/: web_parser.py
tests/agents/: test_compliance_assessor_agent.py  test_policy_analyzer_agent.py  test_policy_fetcher_agent.py  test_regulation_understanding_agent.py  test_report_generator_agent.py
